# Mobile-Agents

./: .gitignore  README.md  pyproject.toml  systemarchitecture.md
app/: auth.py  database.py  main.py  models.py  schemas.py  ws.py
app/routers/: auth.py  decisions.py  objectives.py  repos.py  roles.py  tasks.py  updates.py
app/services/: agent.py  monitor.py  orchestration.py  repo.py  roles.py  state.py
app/services/adapters/: __init__.py  base.py  claude.py  codex.py
frontend/: index.html
roles/: architect.md  developer.md  planner.md  qa.md  release_engineer.md  reviewer.md
web/: index.html  package.json  vite.config.ts
web/src/: App.svelte  app.css
web/src/components/: ConnectionDot.svelte  RoleIcon.svelte  StatusBadge.svelte  Toast.svelte
web/src/lib/: api.ts  roles.ts  stores.svelte.ts  utils.ts  ws.ts
web/src/views/: CreateObjective.svelte  CreateTask.svelte  Dashboard.svelte  Login.svelte  ObjectiveDetail.svelte  TaskDetail.svelte
